# nfft

./: .gitignore  .travis.yml  AUTHORS  CONVENTIONS.md  ChangeLog  Makefile.am  README  README.md  TODO  VERSION.in  acinclude.m4  aminclude.am  bootstrap.sh  configure.ac  configure.in  doxygen.Doxyfile  doxygen.c  doxygen.cfg  doxygen.dox  doxygen.h  linux-build-mex.sh  macos-build-mex.sh  nfft.pc.in  nfft3.pc.in  windows-build-dll.sh
applications/: Makefile.am  doxygen.c
applications/fastgauss/: Makefile.am  README  fastgauss.c  fastgauss.c.in  levelplots.m  output_error.m  output_error_p.m  show_results.m
applications/fastsum/: Makefile.am  README  fastsum.c  fastsum.h  fastsum.m  fastsum_benchomp.c  fastsum_benchomp_createdataset.c  fastsum_benchomp_detail.c  fastsum_matlab.c  fastsum_test.c  fastsum_test.m  fastsum_test_threads.c  kernels.c  kernels.h
applications/fastsumS2/: Makefile.am  README  doxygen.c  doxygen.h  example.in  example.out  fastsumS2.c  fastsumS2.m  readTestcase.m  writeTestcase.m
applications/iterS2/: Makefile.am  README  doxygen.c  doxygen.h  iterS2.c  iterS2.m  readTestcase.m  writeImageTestcase.m  writeTestcase.m
applications/mri/: Makefile.am  doxygen.c
applications/polarFFT/: Makefile.am  README  doxygen.c  doxygen.h  fft_test.m  linogram_fft_test.c  linogram_fft_test.c.in  mpolar_fft_test.c  mpolar_fft_test.c.in  polar_fft_test.c  polar_fft_test.c.in
applications/quadratureS2/: Makefile.am  doxygen.c  doxygen.h  example.in  example.out  lgwt.m  plotGrid.m  quadratureS2.c  quadratureS2.m  readTestcase.m  writeTestcase.m  writeWeights.m
applications/radon/: Makefile.am  README  inverse_radon.c  inverse_radon.c.in  phantom.m  radon.c  radon.c.in  radon.m  ridgelet.m
applications/texture/: Makefile.am  README  nfft3_texture.h  texture.c  texture.h
examples/bug_nfsft/: Makefile.am  bug2_nfsft.c  bug_nfsft.c
examples/docking/: Makefile.am  Molekuel_A_komplett.txt  Molekuel_B_komplett.txt  docking.c  docking.sh  molekuel_A_new.txt  molrad_a.txt  sas.txt
examples/fastsum/: Makefile.am  fastsum.m  fastsum_matlab.c  fastsum_test.c  fastsum_test.m  kernels.c  kernels.h
examples/fastsumS2/: Makefile.am  README  fastsumS2.c  fastsumS2.m  readTestcase.m  writeTestcase.m
examples/nfct/: Makefile.am  README  simple_itest.c  simple_test.c  simple_test.c.in
examples/nfft/: Makefile  Makefile.am  README  flags.c  flags.m  ndft_fast.c  ndft_fast.m  nfft_benchomp.c  nfft_benchomp_createdataset.c  nfft_benchomp_detail.c  nfft_times.c  simple_test.c  simple_test.c.in  simple_test_threads.c  simple_test_threads.c.in  taylor_nfft.c  taylor_nfft.m
examples/nfsft/: Makefile.am  nfsft_benchomp.c  nfsft_benchomp_createdataset.c  nfsft_benchomp_detail.c  simple_test.c  simple_test_threads.c
examples/nnfft/: Makefile.am  README  accuracy.c  accuracy.m  simple_test.c
examples/nsfft/: Makefile.am  README  nsfft_test.c  simple_test.c
examples/polarFFT/: Makefile.am  README  fft_test.m  linogram_fft_test.c  mpolar_fft_test.c  polar_fft_test.c
examples/quadratureS2/: Makefile.am  generateNodes.m  plotGrid.m  quadratureS2.c  quadratureS2.m  writeTestcase.m  writeWeights.m
examples/radon/: Makefile.am  README  fft_test.m  inverse_radon.c  linogram_fft_test.c  mpolar_fft_test.c  phantom.m  polar_fft_test.c  radon.c  radon.m  ridgelet.m
examples/solver/: Makefile.am  README  doxygen.c  doxygen.h  glacier.c  glacier.c.in  glacier.m  glacier_cv.m  simple_test.c  simple_test.c.in
examples/texture/: Makefile.am  linearity_adjoint_moderate_test.inp  linearity_adjoint_test.inp  linearity_moderate_test.inp  linearity_test.inp  nfsft_small_test.inp  nfsft_test.inp  nfsft_test2.inp  simple_solver_moderate_test.inp  simple_solver_test.inp  spherical_harmonic_test.inp  template.c  texture.c  texture.h  textureTest.c  unit_vector_adjoint_test.inp  unit_vector_moderate_test.inp  unit_vector_test.inp
kernel/: Makefile.am
kernel/dpt/: Makefile.am  dpt.c  dpt.h
kernel/fpt/: Makefile.am  fpt.c  fpt.h
kernel/mri/: Makefile.am  mri.c
kernel/nfct/: Makefile.am  nfct.c
kernel/nfft/: Makefile.am  nfft.c
kernel/nfsft/: Makefile.am  api.h  legendre.c  legendre.h  nfsft.c
kernel/nfsoft/: Makefile.am  nfsoft.c  wigner.c  wigner.h
kernel/nfst/: Makefile.am  nfst.c
kernel/nnfft/: Makefile.am  nnfft.c
kernel/nsfft/: Makefile.am  nsfft.c
kernel/solver/: Makefile.am  solver.c  solver2.c  solver_adjoint.c
kernel/texture/: Makefile.am  texture.c  texture.h
kernel/util/: Makefile.am  assert.c  bessel_i0.c  bessel_i0.m  bessel_i0.nb  bspline.c  bspline.nb  damp.c  error.c  float.c  int.c  lambda.c  malloc.c  print.c  rand.c  sinc.c  sort.c  thread.c  time.c  vector.c  vector1.c  vector2.c  vector3.c  version.c  voronoi.c  window.c
matlab/: Makefile.am  README  args.c  imex.h  malloc.c  nfsftmex.c
matlab/fastsum/: EXACT_NEARFIELD.m  Makefile.am  NEARFIELD_BOXES.m  fastsum.m  fastsum_finalize.m  fastsum_get_b.m  fastsum_get_f.m  fastsum_get_num_threads.m  fastsum_init.m  fastsum_init_guru.m  fastsum_precompute.m  fastsum_set_alpha.m  fastsum_set_num_threads.m  fastsum_set_x.m  fastsum_set_x_alpha.m  fastsum_set_y.m  fastsum_simple.m  fastsum_trafo.m  fastsum_trafo_direct.m  fastsummex.c  simple_test.m  test_fastsum.m  test_fastsum_0.asv  test_fastsum_0.m
matlab/fpt/: FPT_AL_SYMMETRY.m  FPT_FUNCTION_VALUES.m  FPT_NO_DIRECT_ALGORITHM.m  FPT_NO_FAST_ALGORITHM.m  FPT_NO_STABILIZATION.m  FPT_PERSISTENT_DATA.m  Makefile.am  (+11 more)
tests/: CUnitAutomated-Results.xml  CUnitAutomated_threads-Results.xml  Makefile.am  PrintVector.m  bessel.c  bessel.h  bspline.c  bspline.h  check.c  check_bessel_i0.c  check_bspline.c  check_bspline.m  check_bspline.nb  check_nfct.m  check_nfct.nb  check_nfft.c  check_nfft.h  check_nfft.m  check_nfft.nb  check_nfft_1d.c  check_nfft_1d.m  check_nfft_1d.nb  check_nfft_2d.c  check_nfft_2d.m  check_nfft_2d.nb  check_nfft_3d.c  check_nfsft.c  check_nfsft.m  check_nfsft.nb  check_nfst.m  check_nfst.nb  checkall  cunit2junit.xsl  nfct.c  nfct.h  nfft.c  nfft.h  nfst.c  nfst.h  reflect.c  (+6 more)
util/: Makefile  Makefile.am  malloc.c  util.c
(+3323 files in other folders)
